# Astar

./: README.md
src_exe/: CMakeLists.txt  main.cpp
src_headers/: Astar.cpp  Astar.hpp  CMakeLists.txt  ImportExport.cpp  ImportExport.hpp  Points.cpp  Points.hpp  auxMacros.hpp
test161/: test_inlet_x.txt  test_inlet_y.txt  test_inlet_z.txt  test_outlet_x.txt  test_outlet_y.txt  test_outlet_z.txt
